--- a/src/App.scss
+++ b/src/App.scss
@@ -295,6 +295,204 @@ html , body {
 }
 
 
+.let-conect{
+    background-color: #F0EFE9;
+    position: relative;
+    z-index: 0;
+    .background-lines {
+        position: absolute;
+        bottom: 0;
+        z-index: -1;
+    }
+    .container{
+        @media(min-width: 768px){
+            margin-bottom: 120px;
+
+        }
+        
+        
+        text-align: center;
+        
+        h2{
+            padding: 130px 0px 90px 0px ;
+            font-family: "DM Sans";
+            font-size: 56px;
+            font-weight: bold;
+        }
+        
+
+    }
+    
+}
+
+
+.information {
+    .container{
+        margin-bottom: 20px;
+
+        @media(min-width: 768px){
+            margin-bottom: 80px;
+        }
+
+
+        @media(min-width: 768px){
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            align-items: center;
+        }
+        
+    
+        
+
+
+        @media(min-width: 1200px){
+            display: flex;
+            justify-content: space-between;
+
+        }
+        
+        
+        
+        
+        >div{
+            display: flex;
+            justify-content: space-between;
+            border: 1px solid #8a8a8a42 ;
+            padding: 20px 35px;
+
+            @media(min-width: 768px){
+                padding: 30px 60px;
+            }
+
+
+            
+            @media(min-width: 1200px){
+                padding: 40px 70px;
+
+            }
+
+            
+            
+            .icon{
+                font-size: 30px;
+                padding: 15px;
+                margin-right: 20px;
+                
+                
+            }
+            .text{
+                h2{
+                    font-family: "DM Sans";
+                font-size: 22px;
+                font-weight: bold;
+                margin-bottom: 15px;
+
+                }
+                h3{
+                    font-family: "Inter";
+                    font-size: 18px;
+                    font-weight: normal;
+                }
+                
+            }
+            
+        }
+
+        
+        
+    }
+}
+
+
+.message{
+
+    .container{
+         background-color: #F0EFE9;
+         padding-top: 125px;
+         h2{
+            text-align: center;
+            font-family: "DM Sans";
+            font-size: 45px;
+            font-weight: bold;
+            
+            
+         }
+
+         .input-info{
+                display: grid;
+                grid-template-columns: 1fr;
+                align-items: center;
+            @media(min-width: 768px){
+                display: grid;
+                grid-template-columns: 1fr;
+                align-items: center;
+            padding: 30px 150px;
+
+            }
+
+            
+            
+            
+            input{
+                border: 1px solid rgba(25,25,25,0.10);
+                padding: 15px 30px;
+                border-radius: 25px;
+                margin-bottom: 15px;
+
+            }
+            
+            #M{
+                padding-bottom: 150px;
+                
+            }
+        }
+        .button-sendMessage{
+            @media(min-width: 768px){
+                padding: 20px 150px;
+            }
+            .btn-yellow{
+                display: block;
+                align-items: center;
+                text-align: center;
+                margin-bottom: 100px;
+                
+            }
+
+        }
+        
+
+        
+        
+
+    }
+}
+
+.map{
+    @media(min-width: 768px){
+        margin-top: 120px;
+
+    }
+    
+    
+    img{
+       max-width: 100%;
+       min-width: 100%;
+    }
+    @media(min-width: 768px){
+        img{
+
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            
+        }
+    }
+
+    
+
+}
+
+
 
 
 
