--- a/src/App.scss
+++ b/src/App.scss
@@ -404,7 +404,7 @@ html , body {
 }
 
 
-.message{
+.message-form{
 
     .container{
          background-color: #F0EFE9;
@@ -440,25 +440,42 @@ html , body {
                 margin-bottom: 15px;
 
             }
+            span{
+                padding: 10px;
+                font-size: 0.8em;
+                color: #F94D1C;
+            }
             
-            #M{
+            .error{
+                color: #f94d1c;
+                border: 1px solid red;
+            }
+            #message{
                 padding-bottom: 150px;
                 
             }
         }
-        .button-sendMessage{
-            @media(min-width: 768px){
-                padding: 20px 150px;
-            }
-            .btn-yellow{
+        .button-sendMessage {
+            @media (min-width: 768px) {
+              padding: 20px 150px;
+              display: flex;
+              justify-content: center;  
+             
+          
+              button {
+                width: 100%;
                 display: block;
-                align-items: center;
-                text-align: center;
+               
                 margin-bottom: 100px;
-                
+                .btn-yellow {
+                    display: block;
+                    align-items: center;
+                    text-align: center;
+                    
+                }
+              }
             }
-
-        }
+          }
         
 
         
